--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#experience">Experiences</a>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link page-scroll" href="#project">Projects</a>
-                    </li>
+                    </li>-->
                     <!--
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drop</a>
@@ -103,17 +103,16 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="text-container">
-                        <h1 class="h1-large is-revealing">Yao-Chih Lee</h1>
-                        <!--<p class='is-header is-revealing'>Research Assistant</p>
-                        <p class='is-header is-revealing'>Institute of Information Science</p>
-                        <p class='is-header is-revealing'>Academia Sinica, Taiwan</p>
-                        <a class='is-header is-revealing' href="mailto:yaochihlee@gmail.com">yaochihlee@gmail.com</a>-->
+                        <h1 class="h1-large is-revealing">Yao-Chih Lee 李曜至</h1>
                         <p style='text-align: justify; line-height: 180%; color: black;'>
-                        I am a research assistant at <a href="https://www.sinica.edu.tw/en">Academia Sinica</a> advised by Prof. <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>.
-                        I received my M.S from <a href="https://www.ntu.edu.tw/english/">National Taiwan University</a> advised by Prof. <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a>, and B.S. from <a href="https://www.nycu.edu.tw/">National Chiao Tung University</a> advised by Prof. <a href="http://covis.cs.nctu.edu.tw/advisor.php">Kuan-Wen Chen</a>. My research interests lie in the fields of 3D Computer Vision, Computational Photography, and Machine Learning.
+                        I am a first-year CS Ph.D. Student at <a href="https://www.umd.edu/">University of Maryland, College Park</a> advised by Prof. <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
+                        My research interests lie in the fields of 3D Computer Vision, Computational Photography, and Machine Learning.
+                        <br/><br/>
+                        Prior to this, I am honored to work with Prof. <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a> at <a href="https://www.sinica.edu.tw/en">Academia Sinica, Taiwan</a>.
+                        I received my M.S from <a href="https://www.ntu.edu.tw/english/">National Taiwan University</a> advised by Prof. <a href="">Yi-Ping Hung</a>, and B.S. from <a href="https://www.nycu.edu.tw/">National Chiao Tung University</a> advised by Prof. <a href="http://covis.cs.nctu.edu.tw/advisor.php">Kuan-Wen Chen</a>. 
                         </p>
                         <br/>
-                        <a class="btn-solid-lg is-header is-revealing" href="mailto:yaochihlee@gmail.com"><i class="fab fas fa-envelope"></i> email</a>
+                        <a class="btn-solid-lg is-header is-revealing" href="mailto:yclee@umd.edu"><i class="fab fas fa-envelope"></i> email</a>
                         <a class="btn-solid-lg is-header is-revealing" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i> Curriculum Vitae</a>
                         <a class="btn-solid-lg is-header is-revealing" href="https://www.linkedin.com/in/yao-chih-lee/"><i class="fab fa-linkedin-in"></i>LinkedIn</a>
                         <a class="btn-solid-lg is-header is-revealing" href="https://github.com/yaochih"><i class="fab fa-github"></i>Github</a>
@@ -152,6 +151,13 @@
                 <div class="col-lg-12">
                     <h1>Education</h1>
                     <div class="block-container">
+                        <div class='row'>
+                            <p class='col-lg-8'>Ph.D. in Computer Science at University of Maryland, College Park</p><p class='col-lg-4 right-info'>Aug. 2022 - present</p>
+                            <p class='col-lg-8'>M.S. in Computer Science and Information Engineering at National Taiwan University</p><p class='col-lg-4 right-info'>Aug. 2018 - Jun. 2020</p>
+                            <p class='col-lg-8'>B.S. in Computer Science at National Chiao Tung University</p><p class='col-lg-4 right-info'>Sep. 2014 - Jun. 2018</p>
+                        </div>    
+                    </div>
+                    <!--<div class="block-container">
 						<div class='row'>
                             <p class='col-lg-8'><b>M.S. in Computer Science and Information Engineering</b></p><p class='col-lg-4 right-info'>Sep. 2018 - Jun. 2020</p>
                             <p class='col-lg-10'>National Taiwan University</p><p class='col-lg-2 right-info'>Taipei, Taiwan</p>
@@ -160,7 +166,7 @@
 								<li><p class='col-lg-12' style='line-height: 16px;'>Rank: 7th / 132</p></li>
 							</ul>
                         </div>
-                    </div> <!-- end of text-container -->
+                    </div> 
                     <div class="block-container">
                         <div class='row'>
                             <p class='col-lg-8'><b>B.S. in Computer Science</b></p><p class='col-lg-4 right-info'>Sep. 2014 - Jun. 2018</p>
@@ -171,7 +177,7 @@
                                 <li><p class='col-lg-12' style='line-height: 16px;'>Academic Achievement Award: 4 times (top 5% ranking in the semester)</p></li>
 							</ul>
                         </div>
-                    </div> <!-- end of text-container -->
+                    </div> --> 
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -184,7 +190,6 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Publications</h1>
-			<!--
                     <hr/>
                     <div class='row  project-row'>
                         <div class="col-lg-4">
@@ -194,10 +199,13 @@
                             <div>
                                 <p class="project-title"><b>GCVD: Globally-Consistent Video Depth and Pose Estimation with Efficiency</b></p>
                                 <p><b>Yao-Chih Lee</b>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Guan-Sheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>.</p>
-                                <p>In submission</p>
+                                <p>arXiv preprint 2022</p>
+                                <br/>
+                                <a class="btn-solid-lg" href="https://arxiv.org/abs/2208.02709"><i class="fab fas fa-file-alt"></i> Paper</a>
+                                <a class="btn-solid-lg" href="https://github.com/yaochih/GCVD-release"><i class="fab fa-github"></i> Code</a>
                             </div>
                         </div>
-                    </div>-->
+                    </div>
                     <hr/>
                     <div class='row  project-row'>
                         <div class="col-lg-4">
@@ -212,7 +220,7 @@
                                 <br/>
                                 <a class="btn-solid-lg" href="https://yaochih.github.io/deep3d-stabilizer.io/"><i class="fab fas fa-globe-asia"></i> Project page</a>
                                 <a class="btn-solid-lg" href="https://yaochih.github.io/files/CVPR2021_deep3d_stabilizer.pdf"><i class="fab fas fa-file-alt"></i> Paper</a>
-                                <!---<a class="btn-solid-lg" href="#your-link"><i class="fab fa-github"></i> Code (comming soon)</a>--->
+                                <a class="btn-solid-lg" href="https://github.com/yaochih/Deep3D-Stabilizer-release"><i class="fab fa-github"></i> Code</a>
                                 <a class='btn-solid-lg' href="https://youtu.be/pMluFVA7NDQ"><i class='fab fa-youtube'></i>Video</a>
                                 <a class='btn-solid-lg' href="https://github.com/yaochih/awesome-video-stabilization"><i class='fab fas fa-list-ul'></i>Awesome video stabilization</a>
                             </div>
@@ -272,7 +280,7 @@
                     <h1>Experiences</h1>
                     <div class="block-container">
                         <div class="row">
-                            <p class='col-lg-8'><b>Research Assistant</b></p><p class='col-lg-4 right-info'>Sep. 2020 - present</p>
+                            <p class='col-lg-8'><b>Research Assistant</b></p><p class='col-lg-4 right-info'>Sep. 2020 - Mar. 2022</p>
                             <p class='col-lg-8'>AI Application and Integration Lab, Academia Sinica, advised by Prof. <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
                             <p class='col-lg-4 right-info'>Taipei, Taiwan</p>
                         </div>
@@ -283,11 +291,11 @@
                             <p class='col-lg-8'>Course: 3D Computer Vision with Deep Learning Applications (at CSIE, NTU)</p>
                             <p class='col-lg-4 right-info'>Taipei, Taiwan</p>
                         </div>
-                    </div> <!-- end of text-container -->
+                    </div>
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-8'><b>Research Assistant</b></p><p class='col-lg-4 right-info'>Jul, 2020 - Aug, 2020</p>
-                            <p class='col-lg-8' style='line-height: 24px;'>Interdisciplinary Human-AI Interaction Research Project <br/>advised by <a href="https://comm.nccu.edu.tw/en/member/faculties/%E9%99%B3-%E5%AE%9C%E7%A7%80-51879163">Prof. Yihsiu Chen (Communication, NCCU, Taiwan)</a>, <a href="https://scholar.lib.ntnu.edu.tw/en/persons/chien-wen-tina-yuan">Prof. Chien-Wen Tina Yuan (Library & Information Studies, NTNU, Taiwan)</a>, and <a href="https://faculty.washington.edu/garyhs/">Prof. Gary Hsieh (Human Centered Design & Engineering, UW, Seattle)</a></p>
+                            <p class='col-lg-8' style='line-height: 24px;'>Interdisciplinary Human-AI Interaction Research Project <br/>advised by <a href="https://comm.nccu.edu.tw/en/member/faculties/%E9%99%B3-%E5%AE%9C%E7%A7%80-51879163">Prof. Yihsiu Chen (Communication at NCCU)</a>, <a href="https://scholar.lib.ntnu.edu.tw/en/persons/chien-wen-tina-yuan">Prof. Chien-Wen Tina Yuan (Library & Information Studies at NTNU)</a>, and <a href="https://faculty.washington.edu/garyhs/">Prof. Gary Hsieh (HCDE at UW, Seattle)</a></p>
                             <p class='col-lg-4 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div> <!-- end of text-container -->
@@ -304,14 +312,14 @@
                             <p class='col-lg-6'>Course: Digital Image Processing (at CSIE, NTU)</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
-                    </div> <!-- end of text-container -->
+                    </div>
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-6'><b>Teaching Assistant</b></p><p class='col-lg-6 right-info'>Feb. 2019 - Jun. 2019</p>
                             <p class='col-lg-6'>Course: Probability (at CSIE, NTU)</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
-                    </div> <!-- end of text-container -->
+                    </div>
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-6'><b>Undergraduate Research Assistant</b></p><p class='col-lg-6 right-info'>Aug. 2016 - Jun. 2018</p>
@@ -325,13 +333,13 @@
                             <p class='col-lg-6'>Course: Computer Vision for UAV Autopilot (at CS, NCTU)</p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
-                    </div> <!-- end of text-container -->
+                    </div>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of basic-2 -->
     <!-- end of details 1 -->
-    <div id="project" class="basic-2">
+    <!--<div id="project" class="basic-2">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -340,7 +348,7 @@
 					<div class='row  project-row'>
                         <div class="col-lg-4 cell-vertical-center">
                             <img style="max-width: 100%; height: auto;" src='images/foveated-rendering.png'>
-						</div> <!-- end of text-container -->
+						</div>
                         <div class="col-lg-8 cell-left">
                             <div>
                                 <p class='project-title'><b>Foveated Rendering in AR</b></p>
@@ -354,7 +362,7 @@
 					<div class='row  project-row'>
                         <div class="col-lg-4 cell-vertical-center">
                             <img style="max-width: 100%; height: auto;" src='images/undergraduate-uav.png'>
-						</div> <!-- end of text-container -->
+						</div> d
                         <div class="col-lg-8 cell-left">
                             <div>
                                 <p class='project-title'><b>An UAV Autopilot System for Sports Player Tracking</b></p>
@@ -367,10 +375,10 @@
 					</div>
 					<hr/>
 
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of basic-2 -->
+                </div>
+            </div>
+        </div> 
+    </div> -->
     <!-- end of details 1 -->
 
 
