--- a/index.html
+++ b/index.html
@@ -61,36 +61,7 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#experience">Experiences</a>
                     </li>
-                    <!--<li class="nav-item">
-                        <a class="nav-link page-scroll" href="#project">Projects</a>
-                    </li>-->
-                    <!--
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drop</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item page-scroll" href="article.html">Article Details</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="terms.html">Terms Conditions</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="privacy.html">Privacy Policy</a>
-                        </div>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#download">Download</a>
-                    </li>
-                    -->
                 </ul>
-                <!--
-                <span class="nav-item app-store-icons">
-                    <a href="#your-link">
-                        <i class="fab fa-apple"></i>
-                    </a>
-                    <a href="#your-link">
-                        <i class="fab fa-android"></i>
-                    </a>
-                </span>
-                -->
             </div> <!-- end of navbar-collapse -->
         </div> <!-- end of container -->
     </nav> <!-- end of navbar -->
@@ -157,27 +128,6 @@
                             <p class='col-lg-8'>B.S. in Computer Science at National Chiao Tung University</p><p class='col-lg-4 right-info'>Sep. 2014 - Jun. 2018</p>
                         </div>    
                     </div>
-                    <!--<div class="block-container">
-						<div class='row'>
-                            <p class='col-lg-8'><b>M.S. in Computer Science and Information Engineering</b></p><p class='col-lg-4 right-info'>Sep. 2018 - Jun. 2020</p>
-                            <p class='col-lg-10'>National Taiwan University</p><p class='col-lg-2 right-info'>Taipei, Taiwan</p>
-							<ul>
-								<li><p class='col-lg-12' style='line-height: 16px;'>GPA:  4.24 / 4.3</p></li>
-								<li><p class='col-lg-12' style='line-height: 16px;'>Rank: 7th / 132</p></li>
-							</ul>
-                        </div>
-                    </div> 
-                    <div class="block-container">
-                        <div class='row'>
-                            <p class='col-lg-8'><b>B.S. in Computer Science</b></p><p class='col-lg-4 right-info'>Sep. 2014 - Jun. 2018</p>
-                            <p class='col-lg-10'>National Chiao Tung University (Now National Yang Ming Chiao Tung University)</p><p class='col-lg-2 right-info'>Hsinchu, Taiwan</p>
-							<ul>
-								<li><p class='col-lg-12' style='line-height: 16px;'>GPA:  4.14 / 4.3 (major 4.2/4.3)</p></li>
-								<li><p class='col-lg-12' style='line-height: 16px;'>Rank: 1st / 50</p></li>
-                                <li><p class='col-lg-12' style='line-height: 16px;'>Academic Achievement Award: 4 times (top 5% ranking in the semester)</p></li>
-							</ul>
-                        </div>
-                    </div> --> 
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -192,7 +142,39 @@
                     <h1>Publications</h1>
                     <hr/>
                     <div class='row  project-row'>
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 cell-vertical-center">
+                            <img style="width: 100%; height: auto;" src='images/shape-aware-snapshot.gif'>
+                        </div>
+                        <div class="col-lg-8 cell-vertical-center project">
+                            <div>
+                                <p class="project-title"><b>Shape-aware Text-driven Layered Video Editing</b></p>
+                                <p><b>Yao-Chih Lee</b>, <a href="#">Ji-Ze Genevieve Jang</a>, <a  href="https://jamie725.github.io/website/">Yi-Ting Chen</a>, <a href="https://elizabethqiu.com/">Elizabeth Qiu</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>.</p>
+                                <p>CVPR 2023</p>
+                                <br/>
+                                <a class="btn-solid-lg" href="https://text-video-edit.github.io/"><i class="fab fas fa-globe-asia"></i> Project page</a>
+                                <a class="btn-solid-lg" href="https://arxiv.org/abs/2301.13173"><i class="fab fas fa-file-alt"></i> Paper</a>
+                            </div>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class='row  project-row'>
+                        <div class="col-lg-4 cell-vertical-center">
+                            <img style="width: 100%; height: auto;" src='images/latent-diffusion-prior-snapshot.gif'>
+                        </div>
+                        <div class="col-lg-8 cell-vertical-center project">
+                            <div>
+                                <p class="project-title"><b>Text-driven Visual Synthesis with Latent Diffusion Prior</b></p>
+                                <p><a href="https://tinghliao.github.io/">Ting-Hsuan Liao</a>, <a  href="http://songweige.github.io/">Songwei Ge</a>, <a href="https://twizwei.github.io/">Yiran Xu</a>, <b>Yao-Chih Lee</b>, <a href="https://badouralbahar.github.io/">Badour AlBahar</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>.</p>
+                                <p>arXiv preprint 2023</p>
+                                <br/>
+                                <a class="btn-solid-lg" href="https://latent-diffusion-prior.github.io/"><i class="fab fas fa-globe-asia"></i> Project page</a>
+                                <a class="btn-solid-lg" href="https://arxiv.org/abs/2301.13173"><i class="fab fas fa-file-alt"></i> Paper</a>
+                            </div>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class='row  project-row'>
+                        <div class="col-lg-4 cell-vertical-center">
                             <img style="width: 100%; height: auto;" src='images/gcvd-snapshot.gif'>
                         </div>
                         <div class="col-lg-8 cell-vertical-center project">
@@ -208,9 +190,11 @@
                     </div>
                     <hr/>
                     <div class='row  project-row'>
-                        <div class="col-lg-4">
-                            <img style="width: 100%; height: auto;" src='images/deep3d_cover_lite.gif'>
-                            <img style="width: 100%; height: auto;" src="images/deep3d-snapshot-bar.png">
+                        <div class="col-lg-4 cell-vertical-center">
+                            <div>
+                                <img style="width: 100%; height: auto;" src='images/deep3d_cover_lite.gif'>
+                                <img style="width: 100%; height: auto;" src="images/deep3d-snapshot-bar.png">
+                            </div>
                         </div> <!-- end of text-container -->
                         <div class="col-lg-8 cell-vertical-center project">
                             <div>
@@ -219,7 +203,7 @@
                                 <p>CVPR 2021</p>
                                 <br/>
                                 <a class="btn-solid-lg" href="https://yaochih.github.io/deep3d-stabilizer.io/"><i class="fab fas fa-globe-asia"></i> Project page</a>
-                                <a class="btn-solid-lg" href="https://yaochih.github.io/files/CVPR2021_deep3d_stabilizer.pdf"><i class="fab fas fa-file-alt"></i> Paper</a>
+                                <a class="btn-solid-lg" href="https://openaccess.thecvf.com/content/CVPR2021/html/Lee_3D_Video_Stabilization_With_Depth_Estimation_by_CNN-Based_Optimization_CVPR_2021_paper.html"><i class="fab fas fa-file-alt"></i> Paper</a>
                                 <a class="btn-solid-lg" href="https://github.com/yaochih/Deep3D-Stabilizer-release"><i class="fab fa-github"></i> Code</a>
                                 <a class='btn-solid-lg' href="https://youtu.be/pMluFVA7NDQ"><i class='fab fa-youtube'></i>Video</a>
                                 <a class='btn-solid-lg' href="https://github.com/yaochih/awesome-video-stabilization"><i class='fab fas fa-list-ul'></i>Awesome video stabilization</a>
@@ -273,7 +257,7 @@
     </div> <!-- end of basic-2 -->
     <!-- end of details 1 -->
 
-    <div id="experience" class="basic-2">
+    <!--<div id="experience" class="basic-2">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -284,7 +268,7 @@
                             <p class='col-lg-8'>AI Application and Integration Lab, Academia Sinica, advised by Prof. <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
                             <p class='col-lg-4 right-info'>Taipei, Taiwan</p>
                         </div>
-                    </div> <!-- end of text-container -->
+                    </div> 
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-8'><b>Teaching Assistant</b></p><p class='col-lg-4 right-info'>Feb. 2021 - Jun. 2021</p>
@@ -298,14 +282,14 @@
                             <p class='col-lg-8' style='line-height: 24px;'>Interdisciplinary Human-AI Interaction Research Project <br/>advised by <a href="https://comm.nccu.edu.tw/en/member/faculties/%E9%99%B3-%E5%AE%9C%E7%A7%80-51879163">Prof. Yihsiu Chen (Communication at NCCU)</a>, <a href="https://scholar.lib.ntnu.edu.tw/en/persons/chien-wen-tina-yuan">Prof. Chien-Wen Tina Yuan (Library & Information Studies at NTNU)</a>, and <a href="https://faculty.washington.edu/garyhs/">Prof. Gary Hsieh (HCDE at UW, Seattle)</a></p>
                             <p class='col-lg-4 right-info'>Taipei, Taiwan</p>
                         </div>
-                    </div> <!-- end of text-container -->
+                    </div>
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-6'><b>Graduate Research Assistant</b></p><p class='col-lg-6 right-info'>Sep. 2018 - Jun. 2020</p>
                             <p class='col-lg-6'>Image and Vision Lab @ NTU, advised by Prof. <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a></p>
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
-                    </div> <!-- end of text-container -->
+                    </div> 
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-6'><b>Teaching Assistant</b></p><p class='col-lg-6 right-info'>Sep. 2019 - Jan. 2020</p>
@@ -326,7 +310,7 @@
                             <p class='col-lg-6'>Collaborative Vision Lab @ NCTU, advised by Prof. <a href="">Kuan-Wen Chen</a></p>
                             <p class='col-lg-6 right-info'>Hsinchu, Taiwan</p>
                         </div>
-                    </div> <!-- end of text-container -->
+                    </div> 
                     <div class="block-container">
                         <div class="row">
                             <p class='col-lg-6'><b>Teaching Assistant</b></p><p class='col-lg-6 right-info'>Feb. 2018 - Jun. 2018</p>
@@ -334,9 +318,9 @@
                             <p class='col-lg-6 right-info'>Taipei, Taiwan</p>
                         </div>
                     </div>
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
+                </div>
+            </div> 
+        </div> end of container -->
     </div> <!-- end of basic-2 -->
     <!-- end of details 1 -->
     <!--<div id="project" class="basic-2">
