--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <!-- end of details 1 -->
 
     <!-- Details 1 -->
-    <div id="education" class="basic-2">
+    <!--<div id="education" class="basic-2">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -128,10 +128,10 @@
                             <p class='col-lg-8'>B.S. in Computer Science at National Chiao Tung University</p><p class='col-lg-4 right-info'>Sep. 2014 - Jun. 2018</p>
                         </div>    
                     </div>
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of basic-2 -->
+                </div> 
+            </div> 
+        </div> 
+    </div> -->
     <!-- end of details 1 -->
 
     <!-- Details 1 -->
