--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<img class="img-fluid" src="images/profile.png" alt="alternative" style="max-width: 60%; margin-left: 20%; margin-right: 20%;">
 				</div>
 			</div>
-			<p>I am a second-year CS Ph.D. student at the University of Maryland, College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
+			<p>I am a CS Ph.D. student at the University of Maryland, College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
 				My research interests lie in the fields of 3D Computer Vision and Video Synthesis.</p>
 			<p>I am honored to work with <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a> at Adobe, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a> at Academia Sinica,
 				<a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a> at National Taiwan University, and <a href="http://covis.cs.nctu.edu.tw/advisor.php">Kuan-Wen Chen</a> at National Chiao Tung University, Taiwan.</p>
@@ -194,7 +194,7 @@
 
 
 	<footer class="container">
-		<span style="font-size: 16px; margin-top: ">Coded by <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a></span>
+		<span style="font-size: 16px; ">Coded by <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a></span>
 	</footer>
 
 
