--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 	<link href="css/fontawesome-all.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="images/cube-solid.svg">
+
+	
 </head>
-<body>
+<body data-spy="scroll" data-target=".fixed-top" class='has-animations'>
 	<div class="container">
 		<div class="intro">
 			<div class="row">
-				<div class="col-lg-8">
+				<div class="col-lg-8 is-revealing is-header">
 					<h1 class="name"><strong>Yao-Chih</strong> Lee</h1>
 					<!--<span class="job-title">Ph.D. Student</span>-->
 					<!--<span class="email">yclee@umd.edu</span>-->
@@ -25,15 +27,16 @@
 					<img class="img-fluid" src="images/profile.png" alt="alternative" style="max-width: 60%; margin-left: 20%; margin-right: 20%;">
 				</div>
 			</div>
-			<p>I am a CS Ph.D. student at the University of Maryland, College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
-				My research interests lie in the fields of 3D Computer Vision and Video Synthesis.</p>
-			<p>I am honored to work with <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a> at Adobe, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a> at Academia Sinica,
-				<a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a> at National Taiwan University, and <a href="http://covis.cs.nctu.edu.tw/advisor.php">Kuan-Wen Chen</a> at National Chiao Tung University, Taiwan.</p>
-			
-			<a class="btn" href="mailto:yclee@umd.edu"><i class="fab fas fa-envelope"></i>&#20 email</a>
-			<a class="btn" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i>&#20 Curriculum Vitae</a>
-			<a class="btn" href="https://www.linkedin.com/in/yao-chih-lee/"><i class="fab fa-linkedin-in"></i>&#20 LinkedIn</a>
-			<a class="btn" href="https://github.com/yaochih"><i class="fab fa-github"></i>&#20 Github</a>
+			<div class="is-revealing is-header">
+				<p>I am a CS Ph.D. student at the University of Maryland, College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
+					My research interests lie in the fields of 3D Computer Vision and Video Synthesis.</p>
+				<p>I am honored to work with <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a> at Adobe, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a> at Academia Sinica,
+					<a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a> at National Taiwan University, and <a href="http://covis.cs.nctu.edu.tw/advisor.php">Kuan-Wen Chen</a> at National Chiao Tung University, Taiwan.</p>
+			</div>
+			<a class="btn is-revealing is-header" href="mailto:yclee@umd.edu"><i class="fab fas fa-envelope"></i>&nbsp email</a>
+			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i>&nbsp Curriculum Vitae</a>
+			<a class="btn is-revealing is-header" href="https://www.linkedin.com/in/yao-chih-lee/"><i class="fab fa-linkedin-in"></i>&nbsp LinkedIn</a>
+			<a class="btn is-revealing is-header" href="https://github.com/yaochih"><i class="fab fa-github"></i>&nbsp Github</a>
 		</div>
 		
 	</div>
@@ -43,7 +46,7 @@
 	<div class="container">
 		<h2 class="section-title timeline">Experience</h2>
 		<ol class="timeline">
-		  <li>
+		  <li class="is-revealing is-header">
 		    <span class="point"></span>
 			<span class="date">Today - Aug. 2022</span>
 		    <p class="description">
@@ -52,7 +55,7 @@
 		    </p>
 		  </li>
 
-		  <li>
+		  <li class="is-revealing is-header">
 		    <span class="point"></span>
 			<span class="date">Aug. 2023 - May. 2023</span>
 		    <p class="description">
@@ -61,7 +64,7 @@
 		    </p>
 		  </li>
 
-		  <li>
+		  <li class="is-revealing is-header">
 		    <span class="point"></span>
 			<span class="date">Mar. 2022 - Sep. 2020</span>
 		    <p class="description">
@@ -70,7 +73,7 @@
 		    </p>
 		  </li>
 		
-		  <li>
+		  <li class="is-revealing is-header">
 		    <span class="point"></span>
 			<span class="date">Jun. 2020 - Sep. 2018</span>
 		    <p class="description">
@@ -79,7 +82,7 @@
 		    </p>
 		  </li>
 
-		  <li>
+		  <li class="is-revealing is-header">
 		    <span class="point"></span>
 			<span class="date">Jun. 2018 - Sep. 2014</span>
 		    <p class="description">
@@ -100,14 +103,14 @@
 			<div class="col-lg-4">
 				<img src='images/shape-aware-snapshot.gif'>
 			</div>
-			<div class="col-lg-8">
+			<div class="col-lg-8 is-revealing is-header">
 				<p class="title">Shape-aware Text-driven Layered Video Editing</p>
 				<p class="author">Yao-Chih Lee, <a href="#">Ji-Ze Genevieve Jang</a>, <a  href="https://jamie725.github.io/website/">Yi-Ting Chen</a>, <a href="https://elizabethqiu.com/">Elizabeth Qiu</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
 				<p class="publish">CVPR 2023</p>
 				<a class="btn" href="https://text-video-edit.github.io/">
-					<i class="fab fas fa-globe-asia"></i>&#20 Project page</a>
+					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 				<a class="btn" href="https://openaccess.thecvf.com/content/CVPR2023/papers/Lee_Shape-Aware_Text-Driven_Layered_Video_Editing_CVPR_2023_paper.pdf">
-					<i class="fab fas fa-file-alt"></i>&#20 Paper</a>
+					<i class="fab fas fa-file-alt"></i>&nbsp Paper</a>
 			</div>
 		</div>
 
@@ -115,14 +118,14 @@
 			<div class="col-lg-4">
 				<img src='images/latent-diffusion-prior-snapshot.gif'>
 			</div>
-			<div class="col-lg-8">
+			<div class="col-lg-8 is-revealing is-header">
 				<p class="title">Text-driven Visual Synthesis with Latent Diffusion Prior</p>
 				<p class="author"><a href="https://tinghliao.github.io/">Ting-Hsuan Liao</a>, <a  href="http://songweige.github.io/">Songwei Ge</a>, <a href="https://twizwei.github.io/">Yiran Xu</a>, <b>Yao-Chih Lee</b>, <a href="https://badouralbahar.github.io/">Badour AlBahar</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
 				<p class="publish">arXiv preprint 2023</p>
 				<a class="btn" href="https://latent-diffusion-prior.github.io/">
-					<i class="fab fas fa-globe-asia"></i>&#20 Project page</a>
+					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 				<a class="btn" href="https://arxiv.org/abs/2301.13173">
-					<i class="fab fas fa-file-alt"></i>&#20 Paper</a>
+					<i class="fab fas fa-file-alt"></i>&nbsp Paper</a>
 			</div>
 		</div>
 
@@ -130,14 +133,14 @@
 			<div class="col-lg-4">
 				<img src='images/gcvd-snapshot.gif'>
 			</div>
-			<div class="col-lg-8">
+			<div class="col-lg-8 is-revealing is-header">
 				<p class="title">GCVD: Globally-Consistent Video Depth and Pose Estimation with Efficiency</p>
 				<p class="author"><b>Yao-Chih Lee</b>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Guan-Sheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
 				<p class="publish">arXiv preprint 2022</p>
 				<a class="btn" href="https://arxiv.org/abs/2208.02709">
-					<i class="fab fas fa-file-alt"></i>&#20 Paper</a>
+					<i class="fab fas fa-file-alt"></i>&nbsp Paper</a>
 				<a class="btn" href="https://github.com/yaochih/GCVD-release">
-					<i class="fab fa-github"></i>&#20 Code</a>
+					<i class="fab fa-github"></i>&nbsp Code</a>
 			</div>
 		</div>
 
@@ -145,20 +148,20 @@
 			<div class="col-lg-4">
 				<img src='images/deep3d_cover_lite.gif'>
 			</div>
-			<div class="col-lg-8">
+			<div class="col-lg-8 is-revealing is-header">
 				<p class="title">3D Video Stabilization with Depth Estimation by CNN-based Optimization</p>
 				<p class="author">Yao-Chih Lee, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Yu-Ta Chen, Chien-Cheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>, <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a></p>
 				<p class="publish">CVPR 2021</p>
 				<a class="btn" href="https://yaochih.github.io/deep3d-stabilizer.io/">
-					<i class="fab fas fa-globe-asia"></i>&#20 Project page</a>
+					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 				<a class="btn" href="https://openaccess.thecvf.com/content/CVPR2021/papers/Lee_3D_Video_Stabilization_With_Depth_Estimation_by_CNN-Based_Optimization_CVPR_2021_paper.pdf">
-					<i class="fab fas fa-file-alt"></i>&#20 Paper</a>
+					<i class="fab fas fa-file-alt"></i>&nbsp Paper</a>
 				<a class="btn" href="https://github.com/yaochih/Deep3D-Stabilizer-release">
-					<i class="fab fa-github"></i>&#20 Code</a>
+					<i class="fab fa-github"></i>&nbsp Code</a>
 				<a class="btn" href="https://youtu.be/pMluFVA7NDQ">
-					<i class="fab fa-youtube"></i>&#20 Video</a>
+					<i class="fab fa-youtube"></i>&nbsp Video</a>
 				<a class="btn" href="https://github.com/yaochih/awesome-video-stabilization">
-					<i class="fab fas fa-list-ul"></i>&#20 Awesome video stabilization</a>
+					<i class="fab fas fa-list-ul"></i>&nbsp Awesome video stabilization</a>
 			</div>
 		</div>
 
@@ -166,12 +169,12 @@
 			<div class="col-lg-4">
 				<img src='images/pixstabnet-pipeline.png'>
 			</div>
-			<div class="col-lg-8">
+			<div class="col-lg-8 is-revealing is-header">
 				<p class="title">PixStabNet: Fast Deep Online Video Stabilization</p>
 				<p class="author">Yu-Ta Chen, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Yao-Chih Lee, Chun-Yu Chen, and <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a></p>
 				<p class="publish">ICIP 2021</p>
 				<a class="btn" href="https://ieeexplore.ieee.org/document/9506801">
-					<i class="fab fas fa-file-alt"></i>&#20 Paper</a>
+					<i class="fab fas fa-file-alt"></i>&nbsp Paper</a>
 			</div>
 		</div>
 
@@ -179,12 +182,12 @@
 			<div class="col-lg-4">
 				<img src='images/part-aware-human-pose-cvprw-2021.png'>
 			</div>
-			<div class="col-lg-8">
+			<div class="col-lg-8 is-revealing is-header">
 				<p class="title">Part-aware Measurement for Robust Multi-View Multi-Human 3D Pose Estimation and Tracking</p>
 				<p class="author">Hau Chu, Jia-Hong Lee, Yao-Chih Lee, Ching-Hsien Hsu, Jia-Da Li, and <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
 				<p class="publish">CVPR Workshop 2021</p>
 				<a class="btn" href="https://arxiv.org/abs/2106.11589">
-					<i class="fab fas fa-file-alt"></i>&#20 Paper</a>
+					<i class="fab fas fa-file-alt"></i>&nbsp Paper</a>
 			</div>
 		</div>
 	</div>
@@ -197,6 +200,13 @@
 		<span style="font-size: 16px; ">Coded by <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a></span>
 	</footer>
 
+	<script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+	<script src="js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+	<script src="js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
+    <script src="js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+    <script src="js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
+	<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+	<script src="js/animation.js"></script>
 
 </body>
 </html>
