--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="col-lg-4">
 				<img src='images/shape-aware-snapshot.gif'>
 			</div>
-			<div class="col-lg-8 is-revealing is-header">
+			<div class="col-lg-8">
 				<p class="title">Shape-aware Text-driven Layered Video Editing</p>
 				<p class="author">Yao-Chih Lee, <a href="#">Ji-Ze Genevieve Jang</a>, <a  href="https://jamie725.github.io/website/">Yi-Ting Chen</a>, <a href="https://elizabethqiu.com/">Elizabeth Qiu</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
 				<p class="publish">CVPR 2023</p>
@@ -118,7 +118,7 @@
 			<div class="col-lg-4">
 				<img src='images/latent-diffusion-prior-snapshot.gif'>
 			</div>
-			<div class="col-lg-8 is-revealing is-header">
+			<div class="col-lg-8">
 				<p class="title">Text-driven Visual Synthesis with Latent Diffusion Prior</p>
 				<p class="author"><a href="https://tinghliao.github.io/">Ting-Hsuan Liao</a>, <a  href="http://songweige.github.io/">Songwei Ge</a>, <a href="https://twizwei.github.io/">Yiran Xu</a>, <b>Yao-Chih Lee</b>, <a href="https://badouralbahar.github.io/">Badour AlBahar</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
 				<p class="publish">arXiv preprint 2023</p>
@@ -133,7 +133,7 @@
 			<div class="col-lg-4">
 				<img src='images/gcvd-snapshot.gif'>
 			</div>
-			<div class="col-lg-8 is-revealing is-header">
+			<div class="col-lg-8">
 				<p class="title">GCVD: Globally-Consistent Video Depth and Pose Estimation with Efficiency</p>
 				<p class="author"><b>Yao-Chih Lee</b>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Guan-Sheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
 				<p class="publish">arXiv preprint 2022</p>
@@ -148,7 +148,7 @@
 			<div class="col-lg-4">
 				<img src='images/deep3d_cover_lite.gif'>
 			</div>
-			<div class="col-lg-8 is-revealing is-header">
+			<div class="col-lg-8">
 				<p class="title">3D Video Stabilization with Depth Estimation by CNN-based Optimization</p>
 				<p class="author">Yao-Chih Lee, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Yu-Ta Chen, Chien-Cheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>, <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a></p>
 				<p class="publish">CVPR 2021</p>
@@ -169,7 +169,7 @@
 			<div class="col-lg-4">
 				<img src='images/pixstabnet-pipeline.png'>
 			</div>
-			<div class="col-lg-8 is-revealing is-header">
+			<div class="col-lg-8">
 				<p class="title">PixStabNet: Fast Deep Online Video Stabilization</p>
 				<p class="author">Yu-Ta Chen, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Yao-Chih Lee, Chun-Yu Chen, and <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a></p>
 				<p class="publish">ICIP 2021</p>
@@ -182,7 +182,7 @@
 			<div class="col-lg-4">
 				<img src='images/part-aware-human-pose-cvprw-2021.png'>
 			</div>
-			<div class="col-lg-8 is-revealing is-header">
+			<div class="col-lg-8">
 				<p class="title">Part-aware Measurement for Robust Multi-View Multi-Human 3D Pose Estimation and Tracking</p>
 				<p class="author">Hau Chu, Jia-Hong Lee, Yao-Chih Lee, Ching-Hsien Hsu, Jia-Da Li, and <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
 				<p class="publish">CVPR Workshop 2021</p>
