--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 			<div class="is-revealing is-header">
 				<p>I am a CS Ph.D. student at the University of Maryland, College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
 					My research interests lie in the fields of 3D Computer Vision and Video Synthesis.</p>
-				<p>I am honored to work with <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a> at Adobe, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a> at Academia Sinica,
+				<p>I am honored to work with <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>, <a href="http://kmatzen.com/">Kevin Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, <a href="https://research.adobe.com/person/jianming-zhang/">Jianming Zhang</a>, and <a href="https://ztzhang.info/">Zhoutong Zhang</a> at Adobe, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a> at Academia Sinica,
 					<a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a> at National Taiwan University, and <a href="http://covis.cs.nctu.edu.tw/advisor.php">Kuan-Wen Chen</a> at National Chiao Tung University, Taiwan.</p>
 			</div>
 			<a class="btn is-revealing is-header" href="mailto:yclee@umd.edu"><i class="fab fas fa-envelope"></i>&nbsp email</a>
-			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i>&nbsp Curriculum Vitae</a>
+			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/resume.pdf"><i class="fab fas fa-file-alt"></i>&nbsp Resume</a>
 			<a class="btn is-revealing is-header" href="https://www.linkedin.com/in/yao-chih-lee/"><i class="fab fa-linkedin-in"></i>&nbsp LinkedIn</a>
 			<a class="btn is-revealing is-header" href="https://github.com/yaochih"><i class="fab fa-github"></i>&nbsp Github</a>
 		</div>
@@ -57,7 +57,7 @@
 
 		  <li class="is-revealing is-header">
 		    <span class="point"></span>
-			<span class="date">Aug. 2023 - May. 2023</span>
+			<span class="date">Nov. 2023 - May 2023</span>
 		    <p class="description">
 		      Research Intern<br>
 			  Adobe
