--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				<a class="btn" href="https://openaccess.thecvf.com/content/CVPR2023/papers/Lee_Shape-Aware_Text-Driven_Layered_Video_Editing_CVPR_2023_paper.pdf">
 					<i class="fab fas fa-file-alt"></i>&nbsp Paper</a>
 				<a class="btn" href="https://github.com/text-video-edit/shape-aware-text-driven-layered-video-editing-release">
-					<i class="fa-brands fa-github"></i>&nbsp Code</a>
+					<i class="fab fa-github"></i>&nbsp Code</a>
 			</div>
 		</div>
 
