--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<span class="date">Nov. 2023 - May 2023</span>
 		    <p class="description">
 		      Research Intern<br>
-			  Adobe
+			  Adobe Research
 		    </p>
 		  </li>
 
