--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 	<title>Yao-Chih Lee</title>
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	
-	<link href="css/fontawesome-all.css" rel="stylesheet">
+	<link rel="stylesheet" href="./assets/css/fontawesome.all.min.css">
+	<!-- <link href="css/fontawesome-all.css" rel="stylesheet"> -->
+	<script defer src="./js/fontawesome.all.min.js"></script>
+	<link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="images/cube-solid.svg">
 
@@ -28,7 +31,7 @@
 				</div>
 			</div>
 			<div class="is-revealing is-header">
-				<p>I am a CS Ph.D. student at the University of Maryland, College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
+				<p>I am a Ph.D. student at the University of Maryland, College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
 					My research interests lie in the fields of 3D Computer Vision and Video Synthesis.</p>
 				<p>I am honored to work with <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, <a href="https://research.adobe.com/person/jianming-zhang/">Jianming Zhang</a>, and <a href="https://ztzhang.info/">Zhoutong Zhang</a> at Adobe, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a> at Academia Sinica,
 					<a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a> at National Taiwan University, and <a href="http://covis.cs.nctu.edu.tw/advisor.php">Kuan-Wen Chen</a> at National Chiao Tung University, Taiwan.</p>
@@ -101,16 +104,31 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
+				<img src='images/casual-fvs.gif'>
+			</div>
+			<div class="col-lg-8">
+				<p class="title">Fast View Synthesis of Casual Videos</p>
+				<p class="author"><u>Yao-Chih Lee</u>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, <a href="https://jimmie33.github.io/">Jianming Zhang</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a></p>
+				<p class="publish">arXiv preprint 2023</p>
+				<a class="btn" href="https://casual-fvs.github.io/">
+					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
+					<a class="btn" href="https://arxiv.org/abs/2312.02135">
+						<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
+			</div>
+		</div>
+
+		<div class="row publication">
+			<div class="col-lg-4">
 				<img src='images/shape-aware-snapshot.gif'>
 			</div>
 			<div class="col-lg-8">
 				<p class="title">Shape-aware Text-driven Layered Video Editing</p>
-				<p class="author">Yao-Chih Lee, <a href="#">Ji-Ze Genevieve Jang</a>, <a  href="https://jamie725.github.io/website/">Yi-Ting Chen</a>, <a href="https://elizabethqiu.com/">Elizabeth Qiu</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
+				<p class="author"><u>Yao-Chih Lee</u>, <a href="#">Ji-Ze Genevieve Jang</a>, <a  href="https://jamie725.github.io/website/">Yi-Ting Chen</a>, <a href="https://elizabethqiu.com/">Elizabeth Qiu</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
 				<p class="publish">CVPR 2023</p>
 				<a class="btn" href="https://text-video-edit.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 				<a class="btn" href="https://openaccess.thecvf.com/content/CVPR2023/papers/Lee_Shape-Aware_Text-Driven_Layered_Video_Editing_CVPR_2023_paper.pdf">
-					<i class="fab fas fa-file-alt"></i>&nbsp Paper</a>
+					<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 				<a class="btn" href="https://github.com/text-video-edit/shape-aware-text-driven-layered-video-editing-release">
 					<i class="fab fa-github"></i>&nbsp Code</a>
 			</div>
@@ -122,12 +140,12 @@
 			</div>
 			<div class="col-lg-8">
 				<p class="title">Text-driven Visual Synthesis with Latent Diffusion Prior</p>
-				<p class="author"><a href="https://tinghliao.github.io/">Ting-Hsuan Liao</a>, <a  href="http://songweige.github.io/">Songwei Ge</a>, <a href="https://twizwei.github.io/">Yiran Xu</a>, <b>Yao-Chih Lee</b>, <a href="https://badouralbahar.github.io/">Badour AlBahar</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
+				<p class="author"><a href="https://tinghliao.github.io/">Ting-Hsuan Liao</a>, <a  href="http://songweige.github.io/">Songwei Ge</a>, <a href="https://twizwei.github.io/">Yiran Xu</a>, <u>Yao-Chih Lee</u>, <a href="https://badouralbahar.github.io/">Badour AlBahar</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
 				<p class="publish">arXiv preprint 2023</p>
 				<a class="btn" href="https://latent-diffusion-prior.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 				<a class="btn" href="https://arxiv.org/abs/2301.13173">
-					<i class="fab fas fa-file-alt"></i>&nbsp Paper</a>
+					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
 			</div>
 		</div>
 
@@ -137,10 +155,10 @@
 			</div>
 			<div class="col-lg-8">
 				<p class="title">GCVD: Globally-Consistent Video Depth and Pose Estimation with Efficiency</p>
-				<p class="author"><b>Yao-Chih Lee</b>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Guan-Sheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
+				<p class="author"><u>Yao-Chih Lee</u>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Guan-Sheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
 				<p class="publish">arXiv preprint 2022</p>
 				<a class="btn" href="https://arxiv.org/abs/2208.02709">
-					<i class="fab fas fa-file-alt"></i>&nbsp Paper</a>
+					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
 				<a class="btn" href="https://github.com/yaochih/GCVD-release">
 					<i class="fab fa-github"></i>&nbsp Code</a>
 			</div>
@@ -152,12 +170,12 @@
 			</div>
 			<div class="col-lg-8">
 				<p class="title">3D Video Stabilization with Depth Estimation by CNN-based Optimization</p>
-				<p class="author">Yao-Chih Lee, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Yu-Ta Chen, Chien-Cheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>, <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a></p>
+				<p class="author"><u>Yao-Chih Lee</u>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Yu-Ta Chen, Chien-Cheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>, <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a></p>
 				<p class="publish">CVPR 2021</p>
 				<a class="btn" href="https://yaochih.github.io/deep3d-stabilizer.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 				<a class="btn" href="https://openaccess.thecvf.com/content/CVPR2021/papers/Lee_3D_Video_Stabilization_With_Depth_Estimation_by_CNN-Based_Optimization_CVPR_2021_paper.pdf">
-					<i class="fab fas fa-file-alt"></i>&nbsp Paper</a>
+					<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 				<a class="btn" href="https://github.com/yaochih/Deep3D-Stabilizer-release">
 					<i class="fab fa-github"></i>&nbsp Code</a>
 				<a class="btn" href="https://youtu.be/pMluFVA7NDQ">
@@ -173,10 +191,10 @@
 			</div>
 			<div class="col-lg-8">
 				<p class="title">PixStabNet: Fast Deep Online Video Stabilization</p>
-				<p class="author">Yu-Ta Chen, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Yao-Chih Lee, Chun-Yu Chen, and <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a></p>
+				<p class="author">Yu-Ta Chen, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, <u>Yao-Chih Lee</u>, Chun-Yu Chen, and <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a></p>
 				<p class="publish">ICIP 2021</p>
 				<a class="btn" href="https://ieeexplore.ieee.org/document/9506801">
-					<i class="fab fas fa-file-alt"></i>&nbsp Paper</a>
+					<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 			</div>
 		</div>
 
@@ -186,10 +204,10 @@
 			</div>
 			<div class="col-lg-8">
 				<p class="title">Part-aware Measurement for Robust Multi-View Multi-Human 3D Pose Estimation and Tracking</p>
-				<p class="author">Hau Chu, Jia-Hong Lee, Yao-Chih Lee, Ching-Hsien Hsu, Jia-Da Li, and <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
+				<p class="author">Hau Chu, Jia-Hong Lee, <u>Yao-Chih Lee</u>, Ching-Hsien Hsu, Jia-Da Li, and <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
 				<p class="publish">CVPR Workshop 2021</p>
 				<a class="btn" href="https://arxiv.org/abs/2106.11589">
-					<i class="fab fas fa-file-alt"></i>&nbsp Paper</a>
+					<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 			</div>
 		</div>
 	</div>
